--- a/app/globals.css
+++ b/app/globals.css
@@ -78,7 +78,9 @@
     opacity: 0.5;
   }
 }
-
+h1 {
+  line-height: 1.25;
+}
 .animate-pulse {
   animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
 }
